--- a/src/style.css
+++ b/src/style.css
@@ -574,6 +574,22 @@ video {
   top: 50%;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -728,8 +744,16 @@ video {
   height: 100%;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .max-h-14 {
   max-height: 3.5rem;
+}
+
+.max-h-10 {
+  max-height: 2.5rem;
 }
 
 .min-h-72 {
@@ -774,6 +798,14 @@ video {
 
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-20 {
+  max-width: 5rem;
+}
+
+.max-w-12 {
+  max-width: 3rem;
 }
 
 .flex-shrink-0 {
@@ -1269,10 +1301,9 @@ canvas {
 }
 
 .react-player {
-  width: 100%;
-  min-height: 537px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  width: 100% !important;
+  min-height: 737px !important;
+  /* object-fit: cover; */
 }
 
 @media (max-width: 1000px) {
